--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,10 @@ yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
 
+node_modules/
+.env
+npm-debug.log
+dist/ (if you have it)
 node_modules
 dist
 dist-ssr
